--- a/collect_app/src/main/res/values/colors.xml
+++ b/collect_app/src/main/res/values/colors.xml
@@ -19,6 +19,7 @@ the License.
     <color name="blue_500">#2196F3</color>
     <color name="green_500">#4CAF50</color>
     <color name="deep_purple_500">#673AB7</color>
+    <color name="grey_100_transparant">#33f5f5f5</color>
 
     <color name="highContrastHighlight">#ff8c00</color>
 
