--- a/collect_app/src/main/res/values/untranslated.xml
+++ b/collect_app/src/main/res/values/untranslated.xml
@@ -33,4 +33,5 @@ the specific language governing permissions and limitations under the License. -
     <string name="basemap_source_usgs" translatable="false">USGS</string>
     <string name="basemap_source_stamen" translatable="false">Stamen</string>
     <string name="basemap_source_carto" translatable="false">Carto</string>
+    <string name="attribution_str">Powered by</string>
 </resources>
