--- a/collect_app/src/main/res/values/moda_theme.xml
+++ b/collect_app/src/main/res/values/moda_theme.xml
@@ -7,7 +7,7 @@
         <item name="colorPrimary">#004ecb</item>
         <item name="colorSecondary">#ff5722</item>
         <item name="colorError">#d32f2f</item>
-        <item name="colorSecondaryVariant">#ff8a50</item>
+        <item name="colorSecondaryVariant">#c41c00</item>
 
         <item name="colorSurface">#75a7ff</item>
         <item name="colorOnPrimary">#FFFFFF</item>
