--- a/collect_app/src/main/res/layout/app_bar_layout_no_logo.xml
+++ b/collect_app/src/main/res/layout/app_bar_layout_no_logo.xml
@@ -12,8 +12,7 @@
             android:id="@+id/toolbar"
             style="@style/Widget.Collect.Toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:navigationIcon="@drawable/moda_s_logo_sm" />
+            android:layout_height="wrap_content" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
