--- a/collect_app/src/main/res/layout/form_download_list.xml
+++ b/collect_app/src/main/res/layout/form_download_list.xml
@@ -17,12 +17,13 @@ the License.
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/app_bar_layout" />
+    <include layout="@layout/app_bar_layout_no_logo" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/appBarLayout">
+        android:layout_below="@id/progressBar"
+        android:layout_above="@id/bottom_nav">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -78,4 +79,6 @@ the License.
 
         </LinearLayout>
     </RelativeLayout>
+
+    <include layout="@layout/bottom_navbar_layout"/>
 </RelativeLayout>
