--- a/collect_app/src/main/res/layout/instance_uploader_list.xml
+++ b/collect_app/src/main/res/layout/instance_uploader_list.xml
@@ -14,13 +14,14 @@ the License.
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/app_bar_layout" />
+    <include layout="@layout/app_bar_layout_no_logo" />
 
     <LinearLayout
         android:id="@+id/llParent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/appBarLayout"
+        android:layout_below="@id/progressBar"
+        android:layout_above="@id/bottom_nav"
         android:orientation="vertical">
 
         <ListView
@@ -62,4 +63,5 @@ the License.
 
     </LinearLayout>
 
+    <include layout="@layout/bottom_navbar_layout"/>
 </RelativeLayout>
