--- a/collect_app/src/main/res/layout/form_entry.xml
+++ b/collect_app/src/main/res/layout/form_entry.xml
@@ -18,7 +18,7 @@ the License.
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include layout="@layout/app_bar_layout"/>
+    <include layout="@layout/app_bar_layout_no_logo"/>
 
     <FrameLayout
         android:id="@+id/questionholder"
