--- a/collect_app/src/main/res/layout/hierarchy_layout.xml
+++ b/collect_app/src/main/res/layout/hierarchy_layout.xml
@@ -16,7 +16,7 @@ the License.
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include layout="@layout/app_bar_layout" />
+    <include layout="@layout/app_bar_layout_no_logo" />
 
     <LinearLayout
         android:id="@+id/pathlayout"
