menambah toolbar menu dari MainMenuActivity pada FillBlankActivity

--- a/collect_app/src/main/res/menu/list_menu.xml
+++ b/collect_app/src/main/res/menu/list_menu.xml
@@ -31,4 +31,18 @@
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="always|collapseActionView"/>
 
+    <!--item
+        android:id="@+id/menu_about"
+        android:title="@string/about_preferences"
+        app:showAsAction="never"/-->
+
+    <item
+        android:id="@+id/menu_general_preferences"
+        android:title="@string/general_preferences"
+        app:showAsAction="never"/>
+
+    <item
+        android:id="@+id/menu_configure_qr_code"
+        android:title="@string/configure_via_qr_code"
+        app:showAsAction="never"/>
 </menu>
