--- a/collect_app/src/main/res/menu/main_menu.xml
+++ b/collect_app/src/main/res/menu/main_menu.xml
@@ -26,10 +26,10 @@ limitations under the License.
         android:title="@string/general_preferences"
         app:showAsAction="never"/>
 
-    <item
+    <!--item
         android:id="@+id/menu_admin_preferences"
         android:title="@string/admin_preferences"
-        app:showAsAction="never"/>
+        app:showAsAction="never"/-->
 
     <item
         android:id="@+id/menu_configure_qr_code"
